# Cato-Home-Assignment

./: .env.example  .gitignore  Cato_Home_Assigment-threat-model.md  Cato_Networks_RPA_Agentic_AI_Assignment_.md  Makefile  README.md  SUBMISSION_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  sitecustomize.py  watchlist.yaml  watchlist_all_exchanges_60.yaml
.codex/: config.toml
.github/workflows/: ci.yml
daily_movers/: __init__.py  __main__.py  cli.py  config.py  errors.py  models.py
daily_movers/adapters/: uipath.py
daily_movers/email/: __init__.py  base.py  eml_backend.py  smtp_backend.py
daily_movers/pipeline/: __init__.py  agent.py  critic.py  heuristics.py  llm.py  orchestrator.py
daily_movers/providers/: yahoo_movers.py  yahoo_ticker.py
daily_movers/render/: eml.py  excel.py  html.py
daily_movers/storage/: __init__.py  cache.py  runs.py
docs/: BUSINESS_CONCEPT.md  DEPLOYMENT.md  OBSERVABILITY.md  TECHNICAL_OVERVIEW.md
scripts/: demo.sh  ethereal_run.py  full_run.ps1  quickstart.sh  tasks.ps1  uipath_smoke.py
specs/: CONSTITUTION.md  PLAN.md  PROMPTS.md  SPEC.md
tests/: ralphing_harness.py  test_agent.py  test_cli.py  test_email_backends.py  test_golden_run.py  test_llm_normalization.py  test_models.py  test_optional_fallbacks.py  test_uipath_adapter.py  test_yahoo_movers_source.py
tests/fixtures/: headlines_aapl.xml  sample_report_row.json  us_movers.json
